--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,7 +24,7 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
-
+/*These divs were changed to navs because it has links*/
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -162,15 +162,15 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+#search-engine-optimization img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+#online-reputation-management img {
     max-height: 200px;
 }
 
-.social-media-marketing img {
+#social-media-marketing img {
     max-height: 200px;
 }
 
