--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    display: inline-block;
     background-color: #d9dcd6;
 }
 
@@ -50,7 +51,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/* The hero class is the image that displays on the webpage*/
 .hero {
     height: 800px;
     width: 100%;
@@ -69,7 +70,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/* Inside the content class are the sections the nav points to */
 .content {
     width: 75%;
     display: inline-block;
